deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storeimage
spec:
  selector:
    matchLabels:
      app: storeimage
  template:
    metadata:
      labels:
        app: storeimage
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: eshopacrdevops1549106886.azurecr.io/storeimage:v1
          name: storeimage
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
apiVersion: v1
kind: Service
metadata:
  name: eshop-website
spec:
  type: ClusterIP
  selector:
    app: storeimage
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productservice
spec:
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - image: eshopacrdevops1549106886.azurecr.io/productservice:v1
          name: productservice
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: eshop-backend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: productservice
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshop-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eshop-website
            port:
              number: 80
      - path: /images/
        pathType: Prefix
        backend:
          service:
            name: eshop-backend
            port:
              number: 80
